# tomato

./: README.md  build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tomatomediacenter/: BuildConfig.kt  MainActivity.kt  MainApplication.kt
app/src/main/java/com/tomatomediacenter/core/utils/: PlatformUtils.kt
app/src/main/java/com/tomatomediacenter/data/auth/: AuthServiceImpl.kt
app/src/main/java/com/tomatomediacenter/data/db/: AppDatabase.kt
app/src/main/java/com/tomatomediacenter/di/: DatabaseModule.kt
app/src/main/java/com/tomatomediacenter/extensions/: Plugin.kt
app/src/main/java/com/tomatomediacenter/ui/: MediaPlayerScreen.kt
app/src/test/java/com/tomatomediacenter/extensions/: PluginTest.kt
download_manager/: README.md
download_manager/download_manager/: __init__.py  downloader.py  progress_tracker.py  queue_manager.py  storage_optimizer.py
download_manager/tests/: test_downloader.py  test_queue_manager.py  test_storage_optimizer.py
wg-manager/: README.md
wg-manager/backend/: api.py  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py  test.db  wg_utils.py  wgmanager.db  youtube_ips.txt
wg-manager/backend/tests/: test_main.py
wg-manager/backend/youtube_engine/: cdn_discovery.py
wg-manager/frontend/: package.json
wg-manager/frontend/src/app/: layout.tsx  page.tsx
wg-manager/frontend/src/app/clients/[id]/: page.tsx
wg-manager/frontend/src/app/login/: page.tsx
wg-manager/frontend/src/lib/: axios.ts
wg-manager/scripts/: install.sh
(+51 files in other folders)
